--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,17 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 # Ignore bundler config
-/.bundle
+.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
+db/*.sqlite3
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
-/tmp
+log/*.log
+tmp
 
 # Ignore the db connection info file.
-/config/database.yml
+config/database.yml
 
 # Ignore the htaccess file
-/public/.htaccess
+public/.htaccess
