--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,8 @@ config/database.yml
 
 # Ignore the htaccess file
 public/.htaccess
+
+# These differ depending on the machine they're on
+# be sure to pull gemfile contents as necessary
 config/initializers/omniauth.rb
+Gemfile*
